--- a/package.json
+++ b/package.json
@@ -12,6 +12,10 @@
   ],
   "author": "dlq",
   "license": "ISC",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/59379788/juyou.git"
+  },
   "dependencies": {
     "angular": "^1.5.0",
     "angular-file-upload": "^2.2.0",
