--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "angular-resource": "^1.5.0",
     "angular-ui-bootstrap": "^1.2.1",
     "angular-ui-router": "^0.2.18",
+    "angular-ui-tree": "^2.14.0",
     "bootstrap": "^3.3.6",
     "jquery": "^2.2.1"
   },
