--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "angular-ui-router": "^0.2.18",
     "angular-ui-tree": "^2.14.0",
     "bootstrap": "^3.3.6",
-    "jquery": "^2.2.1"
+    "font-awesome": "^4.6.1",
+    "jquery": "^2.2.1",
+    "textangular": "^1.5.1"
   },
   "devDependencies": {
     "css-loader": "^0.23.1",
