--- a/package.json
+++ b/package.json
@@ -21,13 +21,18 @@
     "angular-chart.js": "^1.0.2",
     "angular-file-upload": "^2.2.0",
     "angular-resource": "^1.5.0",
+    "angular-sanitize": "^1.6.2",
     "angular-ui-bootstrap": "^1.2.1",
     "angular-ui-router": "^0.2.18",
     "angular-ui-tree": "^2.14.0",
     "bootstrap": "^3.3.6",
+    "file-loader": "^0.10.1",
     "font-awesome": "^4.6.1",
     "jquery": "^2.2.1",
-    "textangular": "^1.5.1"
+    "node-sass": "^3.13.1",
+    "sass-loader": "^3.2.3",
+    "textangular": "^1.5.1",
+    "ui-select": "^0.19.6"
   },
   "devDependencies": {
     "css-loader": "^0.23.1",
