--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "angular": "^1.5.0",
+    "angular-animate": "^1.5.0",
     "angular-bootstrap-switch": "^0.5.1",
     "angular-chart.js": "^1.0.2",
     "angular-file-upload": "^2.2.0",
@@ -26,6 +27,7 @@
     "angular-ui-bootstrap": "^1.2.1",
     "angular-ui-router": "^0.2.18",
     "angular-ui-tree": "^2.14.0",
+    "angularjs-toaster": "^2.1.0",
     "bootstrap": "^3.3.6",
     "bootstrap-switch": "^3.3.4",
     "file-loader": "^0.10.1",
