--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "angular": "^1.5.0",
+    "angular-baidu-map": "^3.1.0",
     "angular-bootstrap-switch": "^0.5.1",
     "angular-chart.js": "^1.0.2",
     "angular-file-upload": "^2.2.0",
